syntax = "proto2";
package protocol.server.register;

message Server_Tag 
{
	required int32 serverType= 1;
	optional int32 groupId = 2;
	optional int32 subId = 3;
}

message MSG_Server_Register 
{
	required Server_Tag tag =1;
}

message MSG_Server_Register_Return 
{
	required uint32 result =1;
	required Server_Tag tag =2;
}

message Connect_Info 
{
	required int32 port = 1;
	required string ip = 2;
}

message MSG_Server_Connect_Command 
{
	required Server_Tag tag = 1;
	required Connect_Info info= 2;
	optional int32 connectType = 4;
}

